tests/integration/tests/check_commands/CHECK/one_string/negative-match/01-negative_match/sample.itest
; RUN: %cat "%S/filecheck.input" | %expect_exit 1 %FILECHECK_EXEC "%S/filecheck.check" | %FILECHECK_TESTER_EXEC "%s" --strict-whitespace --match-full-lines

; CHECK:{{.*}}filecheck.check:1:10: error: CHECK: expected string not found in input{{$}}
; CHECK:{{^}}; CHECK: foo{{$}}
; CHECK:{{^}}         ^{{$}}
; CHECK:<stdin>:1:1: note: scanning from here
; CHECK:hello
; CHECK:^
; CHECK:<stdin>:1:3: note: possible intended match here
; CHECK:hello
; CHECK:  ^
; CHECK-EMPTY
